--- a/.github/workflows/cs.yml
+++ b/.github/workflows/cs.yml
@@ -1,46 +1,47 @@
-name: manual deployment project
-
-on: push
-
-jobs:
-  build-job: 
-    runs-on: ubuntu-latest  
-    steps:
-    - name: Checkout repo
-      uses: actions/checkout@v4
+name: manual deployment workflow
+on: 
+  push:
     
-    - name: Install Cowsay program  
-      run: sudo apt-get update && sudo apt-get install cowsay -y
+jobs:
+    Build:
+        runs-on: ubuntu-latest
+        steps:
+        - name: Checkout
+          uses: actions/checkout@v4.2.2
 
-    - name: Execute Cowsay CMD
-      run: cowsay -f dragon "Run for cover, I am a dragon....RAWR" >> dragon.txt  
+        - name: Install cowsay programm
+          run: sudo apt-get install -y cowsay
 
-    - name: Upload dragon text file
-      uses: actions/upload-artifact@v3
+        - name: Execute cowsay cmd command
+          run: cowsay -f dragon "Run for cover, I am a DRAGON....RAWR" >> dragon.txt
 
-      with:
-        name: dragon-text-file
-        path: dragon.txt
+        - name: Upload dragon.txt file
+          uses: actions/upload-artifact@v4
+          with:
+            name: dragon.txt file
+            path: dragon.txt
+    
+    Test:
+        runs-on: ubuntu-latest
+        needs: Build
+        steps:
+        - name: Dowload dragon.txt
+          uses: actions/download-artifact@v4
+          with:
+            name: dragon.txt file
+        - name: Test file exists
+          run: grep -i "dragon" dragon.txt
 
-  test-job:
-    needs: [build-job]
-    runs-on: ubuntu-latest 
-    steps:
-    - name: Download dragon text file
-      uses: actions/download-artifact@v3
-
-      with:
-        name: dragon-text-file
-
-    - name: Test file exists
-      run: grep -i "dragon" dragon.txt
-
-  deploy-job:
-    needs: [test-job]
-    runs-on: ubuntu-latest
-    steps:
-    - name: Read file
-      run: cat dragon.txt
-
-    - name: Deploy
-      run: echo "Deploying..."
+    Deploy:
+        runs-on: ubuntu-latest
+        needs: Test
+        environment:
+          name: Deployment Environment
+        steps:
+        - name: Dowload dragon.txt
+          uses: actions/download-artifact@v4
+          with:
+            name: dragon.txt file
+        - name: Read file
+          run: cat dragon.txt
+      
